# phantom

./: .gitignore  Cargo.toml  README.md  setup.sh
compiler/: Cargo.toml  build.rs
compiler-tests/: Cargo.toml  README.md  setup.sh
compiler-tests/gen-tests/: Cargo.toml
compiler-tests/otc/: Cargo.toml  README.md
compiler-tests/simple/: Cargo.toml  README.md
compiler-tests/src/: main.rs
compiler-tests/src/guest/: Cargo.toml
compiler-tests/src/guest/src/: main.rs
compiler-tests/string-match/: Cargo.toml  README.md
compiler-tests/sybil-resistant-id/: Cargo.toml  README.md
compiler-tests/template/: Cargo.toml  README.md
compiler-tests/uniswap/: Cargo.toml  README.md
compiler/linker-script/: default.x  default.x.old
compiler/src/: interpreter.rs  lib.rs
compiler/src/interpreter/: testvm.rs
doc/: costs.md  diagram.pptx  phantom.pptx  vmp.pptx
examples/: trace.rs
fhevm/: Cargo.toml
fhevm/benches/: cycle.rs  rd_update.rs
fhevm/doc/: Decompose.pptx  address_bootstrapping.pptx  digit_decomposition.md  fhe_ram.pptx
fhevm/examples/: interpreter.rs  trace.rs
fhevm/src/: address.rs  address_conversion.rs  arithmetic.rs  circuit_bootstrapping.rs  debug.rs  decompose.rs  interpreter.rs  keys.rs  lib.rs  load.rs  measurements.rs  memory.rs  packing.rs  parameters.rs  pc_update.rs  prepare.rs  ram_offset.rs  ram_update.rs  rd_update.rs  registers.rs  store.rs  test_vector.rs  trace.rs  utils.rs
fhevm/src/arithmetic/: add.rs  bitwise.rs  mod.rs
fhevm/src/arithmetic/add/: codegen.rs  mod.rs
fhevm/src/arithmetic/bitwise/: and_codegen.rs  or_codegen.rs  xor_codegen.rs
fhevm/src/arithmetic/codegen/: add_codegen.rs  and_codegen.rs  mod.rs  or_codegen.rs  sll_codegen.rs  slt_codegen.rs  sltu_codegen.rs  sra_codegen.rs  srl_codegen.rs  sub_codegen.rs  xor_codegen.rs
fhevm/src/codegen/: codegen_auipc.rs  codegen_jalr.rs  codegen_lui.rs  codegen_pc_update.rs  codegen_ram_offset.rs  mod.rs
fhevm/src/instructions/: b_type.rs  i_type.rs  j_type.rs  memory.rs  mod.rs  r_type.rs  s_type.rs  u_type.rs
fhevm/src/instructions/b_type/: beq.rs  bge.rs  bgeu.rs  blt.rs  bltu.rs  bne.rs  mod.rs
fhevm/src/instructions/i_type/: addi.rs  andi.rs  jalr.rs  lb.rs  lbu.rs  lh.rs  lw.rs  mod.rs  ori.rs  slli.rs  slti.rs  sltiu.rs  srai.rs  srli.rs  xori.rs
fhevm/src/instructions/j_type/: jal.rs  mod.rs
fhevm/src/instructions/r_type/: add.rs  and.rs  div.rs  divu.rs  mod.rs  mul.rs  mulh.rs  mulhsu.rs  mulhu.rs  or.rs  rem.rs  remu.rs  sll.rs  slt.rs  sltu.rs  sra.rs  srl.rs  sub.rs  xor.rs
fhevm/src/instructions/s_type/: mod.rs
fhevm/src/instructions/u_type/: auipc.rs  lui.rs  mod.rs
fhevm/src/ram/: address.rs  address_read.rs  address_write.rs  arithmetic.rs  base.rs  conversion.rs  coordinate.rs  coordinate_prepared.rs  keys.rs  mod.rs  parameters.rs  ram.rs  store.rs
fhevm/src/ram/codegen/: codegen_auipc.rs  codegen_lui.rs
fhevm/src/tests/: address_conversion.rs  cycle.rs  interpreters.rs  memory.rs  mod.rs  pc_update.rs  ram.rs  ram_offset.rs
fhevm/tests/: address_conversion.rs  arithmetic.rs  circuit_bootstraping.rs  decompose.rs  interpreter.rs  interpreters.rs  memory.rs  packing.rs  ram.rs  trace.rs
lattigo/: main.go
macros/: Cargo.toml
macros/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: alloc.rs  lib.rs
rust/fhe-vm/: Cargo.toml  Circuit Bootstrapping.pptx  ~$Circuit Bootstrapping.pptx
scripts/: script-macos.sh  setup.sh
src/: address.rs  circuit_bootstrapping.rs  decompose.rs  integer.rs  interpreter.rs  lib.rs  memory.rs  packing.rs  parameters.rs  test_vector.rs  trace.rs
src/instructions/: add.rs  addi.rs  and.rs  andi.rs  auipc.rs  beq.rs  bge.rs  bgeu.rs  blt.rs  bltu.rs  bne.rs  ecall.rs  jal.rs  jalr.rs  lb.rs  lbu.rs  lh.rs  lhu.rs  (+22 more)
tests/: address_bootstrapping.rs  circuit_bootstraping.rs  memory.rs  packing.rs  trace.rs
(+89 files in other folders)
