[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
elf = "0.8.0"
poulpy-hal = {workspace = true}
poulpy-core = {workspace = true}
poulpy-cpu-avx = {workspace = true}
poulpy-cpu-ref = {workspace = true}
poulpy-schemes = {workspace = true}
fhevm = { path = "../fhevm"}
itertools = "0.14.0"
tqdm = "0.8.0"
num_cpus = "1.0"

[features]
verbose=[]
