[package]
name = "fhevm"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.14.0"
poulpy-hal = {path = "../../poulpy/poulpy-hal"}
poulpy-core = {path = "../../poulpy/poulpy-core"}
poulpy-cpu-ref = {path = "../../poulpy/poulpy-cpu-ref"}
poulpy-cpu-avx = {path = "../../poulpy/poulpy-cpu-avx"}
poulpy-schemes = {path = "../../poulpy/poulpy-schemes"}
rand_core = "0.9.3"
strum = "0.27.2"
strum_macros = "0.27.2"
paste = "1.0.15"

[dev-dependencies]
criterion = "0.5"
plotters = { version = "0.3.6", features = ["svg_backend"] }

[profile.release]
debug = true

[[bench]]
name = "cycle"
harness = false